<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/text_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="right"
                android:text="@string/action_back"
                android:textColor="@android:color/white"
                android:textSize="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/verification"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="35dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/please_enter_otp_sent_to_your_phone"
                android:textColor="@android:color/white"
                android:textSize="16dp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.alimuzaffar.lib.pin.PinEntryEditText
                    android:id="@+id/txt_pin_entry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:digits="1234567890"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="15dp"
                    android:textColor="@android:color/white"
                    android:textIsSelectable="false"
                    android:textSize="20sp"
                    app:pinAnimationType="none"
                    app:pinBackgroundDrawable="@drawable/bg_pin_oval"
                    app:pinBackgroundIsSquare="true"
                    app:pinLineColors="@color/yellow1"
                    app:pinLineStroke="2dp"
                    app:pinLineStrokeSelected="4dp"
                    app:pinTextBottomPadding="10dp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/Auto_detecting_otp"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="00.56"
                    android:textColor="@android:color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:drawableLeft="@drawable/ic_refresh_black_24dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/action_resend"
                android:textColor="@color/yellow1"
                android:textSize="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/verify_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/action_verify"
                android:textColor="@android:color/black"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
